--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ wgpu ="0.19.3"
 pollster = "0.3"
 bytemuck = { version = "1.15.0", features = [ "derive" ] }
 nanorand = "0.7.0"
+pico-args = "0.5.0"
